--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -69,3 +69,21 @@ button {
 button:hover {
   background-color: #28739e;
 }
+
+table{
+	border: solid 1px #ddd;
+}
+
+table td, table th{
+	text-align: left;
+	padding: 6px 10px;
+}
+
+thead tr{
+	background: #106cc8;
+	color: White;
+}
+
+tr + tr{
+	border-top: solid 1px #eaeaea;
+}
